feat: add FigureBlock component + related styles

--- a/src/styles/movements.styl
+++ b/src/styles/movements.styl
@@ -2,3 +2,9 @@
 
 .bnk-mov-form
     width    20em
+
+.bnk-mov-figures
+    margin          1em 0 2em
+    display         flex
+    flex-direction  row
+    flex-wrap       wrap
