feat: add operation board cell + related styles

--- a/src/styles/operationsBoard.styl
+++ b/src/styles/operationsBoard.styl
@@ -10,16 +10,63 @@
     .coz-table-body
         height auto
 
+    .coz-table-cell
+    .coz-table-header
+        padding-right 1em
+        padding-left  2em
+
     .bnk-table-date
     .bnk-table-amount
-        flex  0 0 20%
-
-    .bnk-table-desc
-        flex  0 0 30%
-
-    .bnk-table-actions
         flex  0 0 15%
 
-    .coz-table-cell.bnk-table-desc,
+    .bnk-table-desc
+        flex                    0 0 45%
+        background-position-x   2em
+
+    .bnk-table-actions
+        flex  0 0 25%
+
+    .coz-table-cell.bnk-table-desc
+        padding-left    5em
+        color           black
     .coz-table-cell.bnk-table-amount
         color black
+
+    .bnk-table-desc--bills
+        background              embedurl('../assets/icons/icon-bills.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--cart
+        background              embedurl('../assets/icons/icon-cart.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--entertainment
+        background              embedurl('../assets/icons/icon-entertainment.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--fastfood
+        background              embedurl('../assets/icons/icon-fastfood.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--health
+        background              embedurl('../assets/icons/icon-health.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--house
+        background              embedurl('../assets/icons/icon-house.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--people
+        background              embedurl('../assets/icons/icon-people.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--phone
+        background              embedurl('../assets/icons/icon-phone.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--restaurant
+        background              embedurl('../assets/icons/icon-restaurant.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--shopping
+        background              embedurl('../assets/icons/icon-shopping.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--transfer
+        background              embedurl('../assets/icons/icon-transfer.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--travel
+        background              embedurl('../assets/icons/icon-travel.svg') em(32px) center no-repeat
+
+    .bnk-table-desc--undefined
+        background              embedurl('../assets/icons/icon-undefined.svg') em(32px) center no-repeat
