fix: select styl

--- a/src/styles/field.styl
+++ b/src/styles/field.styl
@@ -5,6 +5,9 @@
     @extend $form-text
     @extend $form-select
 
+    select
+        padding  .75em
+
     .coz-form-controls
         margin  1em 0
         width   100%
