feat: add actions link + minor styles code improvements

--- a/src/styles/operationsBoard.styl
+++ b/src/styles/operationsBoard.styl
@@ -23,7 +23,7 @@
         text-align  right
 
     .bnk-table-desc
-        flex                    1 1 em(300px)
+        flex    1 1 em(300px)
 
     .bnk-table-actions
         flex  1 1 em(214px)
@@ -34,49 +34,55 @@
     .coz-table-cell.bnk-table-amount
         color black
 
+    .bnk-table-actions-link
+        padding-left   2em
+        padding-top    .1em
+        padding-bottom .1em
+        background     embedurl('../assets/icons/icon-link-out.svg') em(0px) center no-repeat
+
     // All icons for movement types
 
     .bnk-table-desc--bills
-        background              embedurl('../assets/icons/icon-bills.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-bills.svg') center no-repeat
 
     .bnk-table-desc--cart
-        background              embedurl('../assets/icons/icon-cart.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-cart.svg') center no-repeat
 
     .bnk-table-desc--car
         background  embedurl('../assets/icons/icon-car.svg') center no-repeat
 
     .bnk-table-desc--entertainment
-        background              embedurl('../assets/icons/icon-entertainment.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-entertainment.svg') center no-repeat
 
     .bnk-table-desc--fastfood
-        background              embedurl('../assets/icons/icon-fastfood.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-fastfood.svg') center no-repeat
 
     .bnk-table-desc--health
-        background              embedurl('../assets/icons/icon-health.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-health.svg') center no-repeat
 
     .bnk-table-desc--house
-        background              embedurl('../assets/icons/icon-house.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-house.svg') center no-repeat
 
     .bnk-table-desc--people
-        background              embedurl('../assets/icons/icon-people.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-people.svg') center no-repeat
 
     .bnk-table-desc--phone
-        background              embedurl('../assets/icons/icon-phone.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-phone.svg') center no-repeat
 
     .bnk-table-desc--restaurant
-        background              embedurl('../assets/icons/icon-restaurant.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-restaurant.svg') center no-repeat
 
     .bnk-table-desc--shopping
-        background              embedurl('../assets/icons/icon-shopping.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-shopping.svg') center no-repeat
 
     .bnk-table-desc--transfer
-        background              embedurl('../assets/icons/icon-transfer.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-transfer.svg') center no-repeat
 
     .bnk-table-desc--travel
-        background              embedurl('../assets/icons/icon-travel.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-travel.svg') center no-repeat
 
     .bnk-table-desc--undefined
-        background              embedurl('../assets/icons/icon-undefined.svg') em(32px) center no-repeat
+        background  embedurl('../assets/icons/icon-undefined.svg') center no-repeat
 
     .bnk-table-desc--bills
     .bnk-table-desc--cart
