--- a/src/styles/spinner.styl
+++ b/src/styles/spinner.styl
@@ -1,6 +1,6 @@
 @import 'cozy-ui'
 
-.bnk-loading // @stylint ignore
+.bnk-spinner // @stylint ignore
     @extend $icon-16
     @extend $icon-spinner-blue
     margin-left .5em
