feat: Add categories part

--- a/src/styles/categories.styl
+++ b/src/styles/categories.styl
@@ -1,1 +1,26 @@
 @import 'cozy-ui'
+
+.bnk-cat-form
+    display         flex
+    flex-direction  row
+
+    select
+        padding-right   2em
+        font-size       em(18px)
+        font-weight     900
+
+    > div
+        margin          0 1em 0 0
+
+
+.bnk-cat-debits
+.bnk-cat-credits
+    display         flex
+    width           100%
+    margin          .5em 0 2em
+    flex-direction  row
+
+.bnk-cat-figure
+    flex            1 0 20em
+    padding-left   5em
+    padding-top    3em
