--- a/src/styles/field.styl
+++ b/src/styles/field.styl
@@ -20,8 +20,8 @@
 
     .bnk-field
         &:after
-            opacity 0
-            transition: opacity 3s ease-in-out
+            opacity     0
+            transition  opacity 3s ease-in-out
 
     .bnk-field-loading
         &:after
@@ -36,7 +36,7 @@
             @extend $icon
             @extend $icon-16
             opacity 1
-            background-image embedurl("../assets/icons/icon-checked.svg")
+            background-image embedurl('../assets/icons/icon-checked.svg')
 
     .bnk-field-loading
     .bnk-field-saved
@@ -49,4 +49,4 @@
             margin   .9em .75em
 
     .set-view-subtitle
-        margin-bottom  0em
+        margin-bottom  0
