feat: bigger dataset

--- a/src/styles/operationsBoard.styl
+++ b/src/styles/operationsBoard.styl
@@ -84,6 +84,7 @@
 
     .bnk-table-desc--bills
     .bnk-table-desc--cart
+    .bnk-table-desc--car
     .bnk-table-desc--entertainment
     .bnk-table-desc--fastfood
     .bnk-table-desc--health
