feat: add categories sorting + minor fixes

--- a/src/styles/operationsBoard.styl
+++ b/src/styles/operationsBoard.styl
@@ -4,8 +4,9 @@
     @extend $table
 
     .coz-table
-        margin-left -2em
-        width       calc(100% + 2em)
+        width           calc(100% + 2em)
+        margin-left     -2em
+        margin-bottom   3em
 
     .coz-table-body
         height auto
@@ -32,6 +33,7 @@
     .coz-table-cell.bnk-table-desc
         padding-left    4.5em
         color           black
+
     .coz-table-cell.bnk-table-amount
         color black
 
@@ -95,5 +97,5 @@
     .bnk-table-desc--shopping
     .bnk-table-desc--transfer
     .bnk-table-desc--travel
-    .bnk-table-desc--undefined
+    .bnk-table-desc--toBeDefined
         background-position-x   em(24px)
