feat: improve table (boards) styles + responsive behaviour

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -6,4 +6,5 @@
     top-padded(30px)
     left-padded(30px)
     @media (max-width: (768/basefont)rem)
-        padding 0
+        padding         0
+        padding-left    2em
