--- a/src/styles/categories.styl
+++ b/src/styles/categories.styl
@@ -21,6 +21,11 @@
     flex-direction  row
 
 .bnk-cat-figure
-    flex            1 0 20em
-    padding-left   5em
+    flex           1 0 20em
+    padding-left   3em
     padding-top    3em
+
+@media (max-width: (1260/basefont)rem)
+    .bnk-cat-debits
+    .bnk-cat-credits
+        flex-wrap       wrap
