feat: improve categories pie chart + better responsive behaviour

--- a/src/styles/categories.styl
+++ b/src/styles/categories.styl
@@ -21,9 +21,10 @@
     flex-direction  row
 
 .bnk-cat-figure
-    flex           1 0 20em
-    padding-left   3em
+    flex           1 0 18em
+    padding-left   2em
     padding-top    3em
+    position       relative
 
 @media (max-width: (1260/basefont)rem)
     .bnk-cat-debits
