--- a/src/styles/categories.styl
+++ b/src/styles/categories.styl
@@ -17,16 +17,23 @@
 .bnk-cat-credits
     display         flex
     width           100%
-    margin          .5em 0 2em
+    margin          .5em 0 4em
     flex-direction  row
 
 .bnk-cat-figure
     flex           1 0 18em
     padding-left   2em
-    padding-top    3em
     position       relative
+
+.bnk-cat-title
+    margin          2em 0 .5em
 
 @media (max-width: (1260/basefont)rem)
     .bnk-cat-debits
     .bnk-cat-credits
         flex-wrap       wrap
+        flex-direction  column-reverse
+
+    .bnk-cat-figure
+        flex            1 0 4em
+        padding-bottom  1em
