fix: minor categories fixes

--- a/src/styles/operationsBoard.styl
+++ b/src/styles/operationsBoard.styl
@@ -73,11 +73,11 @@
 
     leasuresMvts = leasures_subscription leasures_lessons electronic leasures_supplies multimedia hobbies leasures_others
 
-    outBudgetMvts = security_purchases security_sales advances refunds releasings expenses_bill saving_transfer internal_transfer out- budget_others
+    outBudgetMvts = security_purchases security_sales advances refunds releasings expenses_bill deferred_debit saving_transfer internal_transfer out-budget_others
 
     servicesMvts = home_help financial_consulting legal_consulting bank_charges post services_others
 
-    taxesMvts = social_contribution income_tax wealth_tax property_tax taxes_others
+    taxesMvts = social_contributions income_tax wealth_tax property_tax taxes_others
 
     transportationMvts = car_purchase car_insurance fuel vehicle_maintenance garage vehicle_rental parking_costs vehicle_loan_refund taxi public_transportation transportation_others
 
