styles: improve subcategories styles

--- a/src/styles/categoriesBoard.styl
+++ b/src/styles/categoriesBoard.styl
@@ -51,6 +51,18 @@
         padding-bottom .1em
         background     embedurl('../assets/icons/icon-link-out.svg') em(0px) center no-repeat
 
+    .bnk-table-subcategories
+        position    relative
+        &::after
+            position        absolute
+            content         ''
+            top             0
+            background      transparent
+            width           calc(100% + 1em)
+            height          100%
+            box-shadow      0 0 3px alpha(grey-05, .5) inset
+            pointer-events  none
+
     @media (max-width: (768/basefont)rem)
         .bnk-table-category
             flex    1 0 12em
