fix: subcategories scroll bug

--- a/src/styles/categoriesBoard.styl
+++ b/src/styles/categoriesBoard.styl
@@ -53,6 +53,8 @@
 
     .bnk-table-subcategories
         position    relative
+        width       100%
+        overflow    hidden
         &::after
             position        absolute
             content         ''
