feat: add temporary cozy-sante link

--- a/src/styles/categoriesBoard.styl
+++ b/src/styles/categoriesBoard.styl
@@ -62,7 +62,7 @@
             background      transparent
             width           calc(100% + 1em)
             height          100%
-            box-shadow      0 0 3px alpha(grey-05, .5) inset
+            box-shadow      0 -1px 3px alpha(grey-05, .5) inset
             pointer-events  none
 
     @media (max-width: (768/basefont)rem)
