--- a/src/styles/subcategory.styl
+++ b/src/styles/subcategory.styl
@@ -3,20 +3,27 @@
 [role=application] // @stylint ignore
     @extend $table
 
+    activeBkgColor = #E8F2FF
+
     .coz-table-row
         font-size   em(14px)
         width       100%
-        background  linear-gradient(to right, grey-10 85%, white 100%)
+        background  activeBkgColor
+        cursor      pointer
+        &:hover
+            background  activeBkgColor
 
     .coz-table-cell.bnk-table-subcat-name
         margin-left     2em
-        padding-left    4em
+        padding-left    em(60px) // 24px + 36px
         flex            1 0 13.5em
-        background-size em(32px)
+        color           black
+        background      none
 
     .bnk-table-subcat-percentage
         flex        1 0 4em
         text-align  center
+        white-space nowrap
 
     .bnk-table-subcat-operation
         flex        1 0 9em
@@ -26,25 +33,23 @@
         flex            1 0 6em
         padding-right   1em
         text-align      right
+        color           black
 
     .bnk-table-actions
-        flex  1 1 15.5em
+        flex            1 1 15.5em
+        margin-right    em(26px)
 
     @media (max-width: (768/basefont)rem)
         .coz-table-cell.bnk-table-subcat-name
             flex            1 0 10.5em
 
         .bnk-table-subcat-amount
-            padding-right 2.5em
-
+            padding-right   2.3em
 
     @media (max-width: (1023/basefont)rem)
         .coz-table-cell.bnk-table-subcat-name
             flex            1 0 14em
 
         .bnk-table-subcat-amount
-            padding-right 1em
-
-    @media (max-width: (1260/basefont)rem)
-        .coz-table-row
-            background  grey-10
+            padding-right   1em
+            margin-right    3em
