fix: style adjustments

--- a/src/styles/notifications.styl
+++ b/src/styles/notifications.styl
@@ -1,4 +1,12 @@
+@import 'cozy-ui'
+
 h4
+    color grey-08
+    font-size 1.2em
+
+h5
+    color grey-08
+    font-size 1em
     margin-top 0
     margin-bottom 5px
 
@@ -6,11 +14,11 @@ h4
     display flex
     justify-content flex-start
     align-items center
-    max-width 500px
+    max-width 600px
     margin-bottom 20px
 
 .notification-description
-    color grey
+    color grey-11
     flex-grow 1
     margin 0
     font-size .9em
@@ -18,12 +26,12 @@ h4
 .notification-toggle
     font-size 1.3em
     display inline-block
-    padding-left 10px
+    padding-left 1em
 
 input[type="number"].notification-input
-    padding .6em .4em
+    padding .5em .3em
     margin 0 5px
-    width 4em
+    width 3.5em
 
     &.suffixed + span
         position absolute
