style: linting css

--- a/src/styles/notifications.styl
+++ b/src/styles/notifications.styl
@@ -23,7 +23,7 @@ h5
     margin 0
     font-size .9em
 
-input[type="number"].notification-input
+input[type='number'].notification-input
     padding .5em .3em
     margin 0 5px
     width 3.5em
