--- a/src/styles/accountSwitch.styl
+++ b/src/styles/accountSwitch.styl
@@ -7,33 +7,49 @@
 .account-switch-button
     background  embedurl('../assets/icons/icon-chevron-down.svg') 90% center no-repeat
     padding 10px 10%
+    margin 10px 0
+    width 100%
+    border 0
+    outline 0
+    text-align left
 
-    h3
-        font-size 1em
-        margin 5px 0
-    span
+    .account-name
+        color #32363f
+        font-weight bold
+        max-width 90%
+        text-overflow ellipsis
+        overflow hidden
+        white-space nowrap
+
+    .account-num
         font-size .8em
-        color grey
+        color #95999d
+        font-weight normal
+        margin-top 8px
+
+    &:focus
+        background #d6d8da
 
 .account-switch-menu
     position absolute
     width 100%
     max-height 250px
     overflow auto
-    top 90%
+    top 80%
     left 10%
     background white
-    border 1px solid grey
     border-radius 4px
     z-index 1
     padding 15px 0
+    box-shadow 0 1px 3px 0 rgba(50, 54, 63, 0.19), 0 6px 18px 0 rgba(50, 54, 63, 0.19)
+    border solid 1px rgba(50, 54, 63, 0.12)
 
     h4
         margin 0
         margin-bottom 10px
-        padding 0 13px
+        padding 0 16px
         font-size .8em
-        color grey
+        color #95999d
 
     ul
         list-style none
@@ -42,8 +58,10 @@
 
     li
         box-sizing border-box
-        padding 3px 8px
+        padding 8px 16px
         border-left 3px solid transparent
+        color #32363f
+        cursor pointer
 
     .active
         border-left-color dodger-blue
