--- a/src/styles/accountSwitch.styl
+++ b/src/styles/accountSwitch.styl
@@ -2,54 +2,56 @@
 
 .account-switch
     position relative
-    margin-bottom 30px
+    padding-bottom 20px
+    margin-bottom 20px
+    border-bottom 1px solid grey-09
 
 .account-switch-button
-    background  embedurl('../assets/icons/icon-chevron-down.svg') 90% center no-repeat
-    padding 10px 10%
     margin 10px 0
     width 100%
+    padding 15px 10%
     border 0
-    outline 0
     text-align left
+    outline 0
+    background  embedurl('../assets/icons/icon-chevron-down.svg') 90% center no-repeat
 
     .account-name
-        color #32363f
-        font-weight bold
         max-width 90%
-        text-overflow ellipsis
         overflow hidden
+        font-weight bold
+        color grey-08
+        text-overflow ellipsis
         white-space nowrap
 
     .account-num
-        font-size .8em
-        color #95999d
-        font-weight normal
         margin-top 8px
+        font-size .8em
+        color grey-11
+        font-weight normal
 
     &:focus
-        background #d6d8da
+        background grey-09
 
 .account-switch-menu
     position absolute
-    width 100%
-    max-height 250px
-    overflow auto
     top 80%
     left 10%
-    background white
-    border-radius 4px
     z-index 1
+    overflow auto
+    width 100%
+    max-height 250px
     padding 15px 0
-    box-shadow 0 1px 3px 0 rgba(50, 54, 63, 0.19), 0 6px 18px 0 rgba(50, 54, 63, 0.19)
-    border solid 1px rgba(50, 54, 63, 0.12)
+    border solid 1px rgba(50, 54, 63, .12)
+    border-radius 4px
+    background white
+    box-shadow 0 1px 3px 0 rgba(50, 54, 63, .19), 0 6px 18px 0 rgba(50, 54, 63, .19)
 
     h4
         margin 0
         margin-bottom 10px
         padding 0 16px
         font-size .8em
-        color #95999d
+        color grey-11
 
     ul
         list-style none
@@ -60,7 +62,7 @@
         box-sizing border-box
         padding 8px 16px
         border-left 3px solid transparent
-        color #32363f
+        color grey-08
         cursor pointer
 
     .active
