feat: fetch and display group settings

--- a/src/styles/groupes.styl
+++ b/src/styles/groupes.styl
@@ -29,7 +29,7 @@
 
         &.icon-plus
             padding-left 1.5em
-            background  embedurl('../assets/icons/icon-chevron-down-active.svg') left center no-repeat
+            background  embedurl('../assets/icons/icon-add.svg') left center no-repeat
 
 
 .bnk-form
