fix: minor style updates

--- a/src/styles/groupes.styl
+++ b/src/styles/groupes.styl
@@ -8,17 +8,22 @@
         margin-left     -2em
         margin-bottom   3em
 
+    .coz-table-row:hover
+        background transparent
+
     .coz-table-body
         height auto
 
     .bnk-table-libelle
-        flex 0 0 20%
+        flex 0 0 30%
 
     .bnk-table-comptes
-        flex 0 0 70%
+        flex 0 0 50%
 
     .bnk-table-actions
-        flex 0 0 10%
+        flex 0 0 20%
+        padding-right 0
+        text-align right
 
     .bnk-action-button
         background 0
