--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -5,6 +5,8 @@
 .bnk-content
     top-padded(30px)
     left-padded(30px)
+    right-padded(30px)
     @media (max-width: (768/basefont)rem)
         padding         0
         padding-left    2em
+        padding-right    2em
