--- a/src/styles/accountSwitch.styl
+++ b/src/styles/accountSwitch.styl
@@ -39,16 +39,15 @@
     z-index 1
     overflow auto
     width 100%
-    max-height 250px
-    padding 15px 0
+    max-height 350px
+    padding 0
     border solid 1px rgba(50, 54, 63, .12)
     border-radius 4px
     background white
     box-shadow 0 1px 3px 0 rgba(50, 54, 63, .19), 0 6px 18px 0 rgba(50, 54, 63, .19)
 
     h4
-        margin 0
-        margin-bottom 10px
+        margin 10px 0
         padding 0 16px
         font-size .8em
         color grey-11
@@ -69,3 +68,8 @@
         border-left-color dodger-blue
         background  embedurl('../assets/icons/icon-checked-blue.svg') 98% center no-repeat
         font-weight bold
+
+    .account-count
+        padding-left 1em
+        color grey-11
+        font-size .8em
