style: color adjusments

--- a/src/styles/groupes.styl
+++ b/src/styles/groupes.styl
@@ -17,6 +17,9 @@
     .bnk-table-libelle
         flex 0 0 30%
 
+    .coz-table-cell.bnk-table-libelle
+        color black
+
     .bnk-table-comptes
         flex 0 0 50%
 
@@ -46,6 +49,9 @@
 
 .coz-table-modal
     width           100%
+
+    .bnk-table-acct-number
+        color grey-11
 
     .coz-table-cell
         flex 0 0 33%
