--- a/src/styles/accountSwitch.styl
+++ b/src/styles/accountSwitch.styl
@@ -57,15 +57,23 @@
         margin 0
         padding 0
 
-    li
+
+    button
         box-sizing border-box
+        width 100%
         overflow hidden
         padding 8px 26px 8px 16px
+        border 0
         border-left 3px solid transparent
+        background 0
         color grey-08
         text-overflow ellipsis
         white-space nowrap
         cursor pointer
+        text-align left
+
+        &:focus
+            outline 0
 
     a
         display block
