fix: better way to handle menu state

--- a/src/styles/accountSwitch.styl
+++ b/src/styles/accountSwitch.styl
@@ -29,6 +29,9 @@
         color grey-11
         font-weight normal
 
+    &.active
+        background grey-09
+
     &:focus
         background grey-09
 
@@ -74,6 +77,7 @@
 
         &:focus
             outline 0
+            background grey-09
 
     a
         display block
