fix: account for changes in cozy-ui

--- a/src/styles/modals.styl
+++ b/src/styles/modals.styl
@@ -1,15 +1,15 @@
 .modal--fullscreen.modal--fullscreen // HACK to increase specificity
     // TODO fix this when we have a proper way to add a
     // custom class on Modal components
-    & > div > div > div
+    & > div > div > div > div
         padding-top 0
         padding-bottom 0
         overflow hidden
 
     :global
         .coz-intent
-            width 90vw
-            height 90vh
+            width 85vw
+            height 85vh
 
     iframe
         width 100%
