--- a/src/styles/icons.styl
+++ b/src/styles/icons.styl
@@ -6,11 +6,11 @@ green=#35ce68
 .sharing-icon
     background-image embedurl('../assets/icons/ui/icon-share.svg')
     display inline-block
-    background-size 0.6rem 0.6rem
+    background-size .6rem .6rem
     width 1rem
     height 1rem
     background-repeat no-repeat
-    background-position 0.2rem 0.2rem
+    background-position .2rem .2rem
     border-radius 50%
     vertical-align bottom
 
