--- a/src/styles/operationsBoard.styl
+++ b/src/styles/operationsBoard.styl
@@ -42,6 +42,7 @@
         color black
 
     .bnk-table-actions-link
+        cursor pointer
         padding-left   2em
         padding-top    .1em
         padding-bottom .1em
