feat: Add app link :link:

--- a/src/styles/operationsBoard.styl
+++ b/src/styles/operationsBoard.styl
@@ -31,6 +31,13 @@
     .bnk-table-actions
         flex  1 1 15em
 
+        span
+            display block
+            margin-bottom  em(10px)
+
+            &:last-child
+                margin-bottom 0
+
     .coz-table-cell.bnk-table-desc
         padding-left    4.5em
         color           black
