--- a/src/styles/operationsBoard.styl
+++ b/src/styles/operationsBoard.styl
@@ -39,7 +39,16 @@
         flex    1 0 25em
 
     .bnk-table-action
-        flex  1 1 15em
+        &.coz-desktop
+            flex  1 1 15em
+        &.coz-mobile
+            width 30px
+            white-space nowrap
+            padding-left 0
+
+            a
+                padding-left 4em
+
 
     .bnk-table-actions
         width 70px
